--- a/Pizza Calculator/Resources/layout/Main.axml
+++ b/Pizza Calculator/Resources/layout/Main.axml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/relativeLayout1"
+	android:id="@+id/frameLayout"
 	android:minWidth="150px"
 	android:minHeight="150px"
 	android:layout_height="fill_parent"
 	android:layout_width="fill_parent">
-	
+		
+	<TextView
+		android:id="@+id/empty_view"
+		style="@android:style/TextAppearance.DeviceDefault.Medium"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:gravity="center"
+		android:visibility="visible"
+		android:text="@string/no_data_available"/>
+		
 	<android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
+		android:visibility="gone"
         android:scrollbars="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" 
-		android:layout_marginTop="5.0dp" />
+		android:layout_marginTop="5.0dp"/>
 	<android.support.design.widget.FloatingActionButton
 		android:id="@+id/add"
 		android:layout_width="wrap_content"
@@ -27,6 +36,7 @@
 		app:backgroundTint="#ff4caf50"/>
 	<android.support.design.widget.FloatingActionButton
 		android:id="@+id/compare"
+		android:visibility="gone"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|left"
@@ -36,4 +46,10 @@
 		android:layout_alignParentBottom="true"
 		android:layout_alignParentLeft="true"
 		app:backgroundTint="#ffff9800"/>
-</RelativeLayout>
+	<ProgressBar
+		android:id="@+id/progressbar"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:visibility="invisible"
+		android:layout_gravity="center" />
+</FrameLayout>
