--- a/Pizza Calculator/Resources/layout/Main.axml
+++ b/Pizza Calculator/Resources/layout/Main.axml
@@ -23,18 +23,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" 
 		android:layout_marginTop="5.0dp"/>
-	<android.support.design.widget.FloatingActionButton
-		android:id="@+id/add"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom|right"
-		android:src="@drawable/ic_add"
-		android:layout_marginRight="15dp"
-		android:layout_marginBottom="15dp"
-		android:layout_alignParentBottom="true"
-		android:layout_alignParentRight="true"
-		app:backgroundTint="#ff4caf50"/>
-	<android.support.design.widget.FloatingActionButton
+
+	<Refractored.Fab.FloatingActionButton
 		android:id="@+id/compare"
 		android:visibility="gone"
 		android:layout_width="wrap_content"
@@ -45,7 +35,20 @@
 		android:layout_marginBottom="15dp"
 		android:layout_alignParentBottom="true"
 		android:layout_alignParentLeft="true"
-		app:backgroundTint="#ffff9800"/>
+		app:fab_colorNormal="#ffff9800"/>
+
+	<Refractored.Fab.FloatingActionButton
+        android:id="@+id/add"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|right"
+		android:src="@drawable/ic_add"
+		android:layout_marginRight="15dp"
+		android:layout_marginBottom="15dp"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentRight="true"
+		app:fab_colorNormal="#ff4caf50"/>
+
 	<ProgressBar
 		android:id="@+id/progressbar"
 		android:layout_width="wrap_content"
