--- a/Pizza Calculator/Resources/layout/PizzaListLayout.axml
+++ b/Pizza Calculator/Resources/layout/PizzaListLayout.axml
@@ -26,6 +26,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:visibility="visible"
+				android:scaleType="centerCrop"
                 app:layout_constraintBottom_toTopOf="@+id/guideline1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
