--- a/Pizza Calculator/Resources/layout/Main.axml
+++ b/Pizza Calculator/Resources/layout/Main.axml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/frameLayout"
-	android:minWidth="150px"
-	android:minHeight="150px"
-	android:layout_height="fill_parent"
-	android:layout_width="fill_parent">
+	android:layout_width="match_parent"
+    android:layout_height="match_parent">
 		
 	<TextView
 		android:id="@+id/empty_view"
 		style="@android:style/TextAppearance.DeviceDefault.Medium"
+		android:fontFamily="@font/notosans"
+		app:fontFamily="@font/notosans"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:gravity="center"
@@ -24,9 +25,10 @@
         android:layout_height="fill_parent" 
 		android:layout_marginTop="5.0dp"/>
 
-	<Refractored.Fab.FloatingActionButton
+	<android.support.design.widget.FloatingActionButton
+		app:layout_behavior="Pizza_Calculator.ScrollAwareFABBehavior"
 		android:id="@+id/compare"
-		android:visibility="gone"
+		android:visibility="invisible"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|left"
@@ -35,9 +37,11 @@
 		android:layout_marginBottom="15dp"
 		android:layout_alignParentBottom="true"
 		android:layout_alignParentLeft="true"
-		app:fab_colorNormal="#ffff9800"/>
+		app:borderWidth="0dp"
+		android:backgroundTint="#ffff9800"/>
 
-	<Refractored.Fab.FloatingActionButton
+	<android.support.design.widget.FloatingActionButton
+		app:layout_behavior="Pizza_Calculator.ScrollAwareFABBehavior"
         android:id="@+id/add"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -46,13 +50,13 @@
 		android:layout_marginRight="15dp"
 		android:layout_marginBottom="15dp"
 		android:layout_alignParentBottom="true"
-		android:layout_alignParentRight="true"
-		app:fab_colorNormal="#ff4caf50"/>
+		android:layout_alignParentRight="true"/>
 
 	<ProgressBar
 		android:id="@+id/progressbar"
+		style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:visibility="invisible"
 		android:layout_gravity="center" />
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
